# streamdown-rs

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
crates/streamdown-ansi/: Cargo.toml
crates/streamdown-ansi/src/: codes.rs  color.rs  lib.rs  sanitize.rs  style.rs  utils.rs
crates/streamdown-config/: Cargo.toml
crates/streamdown-config/src/: computed.rs  features.rs  lib.rs  style.rs
crates/streamdown-core/: Cargo.toml
crates/streamdown-core/src/: enums.rs  error.rs  lib.rs  state.rs  types.rs
crates/streamdown-parser/: Cargo.toml
crates/streamdown-parser/src/: entities.rs  inline.rs  lib.rs  tokenizer.rs
crates/streamdown-plugin/: Cargo.toml
crates/streamdown-plugin/src/: builtin.rs  latex.rs  lib.rs
crates/streamdown-render/: Cargo.toml
crates/streamdown-render/src/: code.rs  features.rs  heading.rs  lib.rs  list.rs  table.rs  text.rs
crates/streamdown-syntax/: Cargo.toml
crates/streamdown-syntax/src/: languages.rs  lib.rs
examples/: basic.rs  custom_style.rs  latex.rs  streaming.rs
src/: cli.rs  main.rs  pty.rs
tests/: integration.rs  proptest.rs  snapshots.rs
tests/snapshots/: snapshots__snapshot_blockquote.snap  snapshots__snapshot_bold.snap  snapshots__snapshot_cjk_content.snap  snapshots__snapshot_code_block_no_language.snap  snapshots__snapshot_code_block_python.snap  snapshots__snapshot_code_block_rust.snap  snapshots__snapshot_complex_document.snap  snapshots__snapshot_heading_all_levels.snap  snapshots__snapshot_heading_h1.snap  snapshots__snapshot_heading_h2.snap  snapshots__snapshot_horizontal_rule.snap  snapshots__snapshot_inline_code.snap  snapshots__snapshot_italic.snap  snapshots__snapshot_mixed_inline.snap  snapshots__snapshot_narrow_width.snap  snapshots__snapshot_nested_blockquote.snap  snapshots__snapshot_nested_list.snap  snapshots__snapshot_ordered_list.snap  snapshots__snapshot_simple_table.snap  snapshots__snapshot_think_block.snap  snapshots__snapshot_unordered_list.snap  snapshots__snapshot_wide_table.snap
