[package]
name = "streamdown-ansi"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "ANSI escape codes and terminal utilities for streamdown"

[dependencies]
crossterm.workspace = true
regex.workspace = true
unicode-width.workspace = true
