[package]
name = "streamdown-config"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Configuration loading and management for streamdown"

[dependencies]
streamdown-core.workspace = true
streamdown-ansi.workspace = true
serde.workspace = true
toml.workspace = true
directories.workspace = true
crossterm.workspace = true
