[package]
name = "streamdown-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core types, traits, and error definitions for streamdown"

[dependencies]
thiserror.workspace = true
serde.workspace = true
regex.workspace = true
