[package]
name = "streamdown-syntax"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Syntax highlighting for streamdown via syntect"

[dependencies]
streamdown-core.workspace = true
syntect.workspace = true
